Add lab 1 to index, update with g code descriptions and minor other improvements

--- a/E15/F22/index.html
+++ b/E15/F22/index.html
@@ -1,4 +1,4 @@
-**ENGR 015 Labs 1 (Fall 2022)**
+**ENGR 015 Labs (Fall 2022)**
 
 # Lab Information
 **Instructor:** Maggie Delano, Singer 233, schedule office hours [here](https://calendly.com/maggiedelano/meet)
@@ -13,7 +13,7 @@
 
 # Labs
 
-Information about labs will be added here as the semester progresses.
+- [Lab 1](E15_Lab1_FA22.html): Introduction to Program Flow in Embedded Systems
 
 # Final Project
 
