Update for lab 2

--- a/E15/F22/index.html
+++ b/E15/F22/index.html
@@ -5,7 +5,7 @@
 
 **Lab Location:** Singer 221
 
-**Lab Sections:** Assignments will be posted Friday, August 26th, 2022 after registration
+**Lab Sections:** View your assignment and the lab schedule [here](https://docs.google.com/spreadsheets/d/1ATGU8RP2p4EMpu22abTce7feMXpnm-5Mug7c2zqsJJM/edit#gid=1550621865)
 
 **Moodle Page:** Part of the lecture Moodle [here](https://moodle.swarthmore.edu/course/view.php?id=22239#section-15)
 
@@ -14,6 +14,7 @@
 # Labs
 
 - [Lab 1](E15_Lab1_FA22.html): Introduction to Program Flow in Embedded Systems
+- [Lab 2](E15_Lab2_FA22.html): Using Conditionals and Buttons to Create A Passcode Enabled LED
 
 # Final Project
 
