--- a/E15/F22/E15_Lab2_FA22.html
+++ b/E15/F22/E15_Lab2_FA22.html
@@ -36,7 +36,7 @@ void loop(){
 }
 ```
 
-Programming the Arduino Uno using the Arduino IDE is almost the same as programming the Circuit Playground; click Tools > Boards and select "Arduino Uno" from the list. Be sure to also update the port if needed.
+Programming the Arduino Uno using the Arduino IDE is almost the same as programming the Circuit Playground. First, connect the USB connector to the board. Next, plug the other end of the USB into a computer (if you don't have the right connector on your laptop, you can use a lab computer). Once connected to the computer, click Tools > Boards and select "Arduino Uno" from the list. Be sure to also update the port if needed.
 
 # Lab Exercises
 ## Detecting A Button Press (1 pts)
@@ -144,13 +144,13 @@ void loop(){
 You may have noticed that there's a slight issue with this code: once it *does* detect a button press, it repeats the message until you release it. Update your code to prevent this using a boolean variable that ensures the message is displayed only once per button press. After that, tweak the `debounceDelay` as needed to prevent extra button presses from being detected.
 
 ## Wiring up an LED (1 pt)
-After your debounce code is successful, it's time to use hardware for the first time to connect an LED to the Arduino Uno. To do this we will be using a device called a breadboard. A breadboard is a small circuit board that has holes that 22 gauge wires can fit into that we can use to rapidly prototype circuits. It has connections across the numbered rows in columns A–E and F–J as shown. It also has connections down either side called "rails" that are used to connect power and ground for more involved circuits.
+After your debounce code is successful, it's time to use hardware for the first time to connect an LED to the Arduino Uno. To do this we will be using a device called a breadboard. A breadboard is a small circuit board that has holes that 22 gauge wires can fit into that we can use to rapidly prototype circuits. It has connections across the numbered rows in columns A–E and F–J as shown. This means that anything placed in a row will be connected together. It also has connections down either side called "rails" that are used to connect power and ground for more involved circuits. This means anything placed in a "rail" will be connected together.
 
 ![Figure [breadboard]: Example breadboard connections ([image source](https://magpi.raspberrypi.com/articles/breadboard-tutorial))](images/Breadboard_Anno.jpeg)
 
-For this lab, we will be connecting an LED to pin 7 on the Arduino Uno to turn it on and off in response to button presses on the Joystick shield. We connect pin 7 on the Arduino Uno to a 150 Ω resistor, and then that resistor to the LED. This limits the amount of current flowing through the LED so we don't burn out the Arduino Uno pin or destroy the LED by sourcing too much current. We also connect the LED to the ground terminal. This completes the circuit so current will flow.
+For this lab, we will be connecting an LED to pin 7 on the Arduino Uno to turn it on and off in response to button presses on the Joystick shield. Since we have a shield on top, we will place the wires into the shield on top instead of directly onto the Arduino Uno. We connect pin 7 on the Joystick shield to a 150 Ω resistor, and then that resistor to the LED. This limits the amount of current flowing through the LED so we don't burn out the Arduino Uno pin or destroy the LED by sourcing too much current. We also connect the LED to the ground terminal of the shield. This completes the circuit so current will flow.
 
-Connect the resistor to pin 7 using a short wire. You can get a piece of wire using the provided wire strippers. The positive end of the LED (the longer lead) should be connected to the opposite end of the resistor from the wire to pin 7. Then connect the shorter lead of the LED to ground using anothe wire. Your results should look something like this image, though the components don't need to be in exactly the same rows:
+Connect the resistor to pin 7 using a short wire. You can get a piece of wire using the provided wire strippers. The positive end of the LED (the longer lead) should be connected to the opposite end of the resistor from the wire to pin 7. Then connect the shorter lead of the LED to ground using anothe wire. Your results should look something like this image, though the components don't need to be in exactly the same rows. *Note that this image only shows the Arduino Uno, but we'll be connecting to the shield on top instead.*
 
 ![Figure [LED]: Wiring up an LED](images/LED_wiring.png)
 
@@ -169,7 +169,9 @@ Now that you've got the LED toggling working for one button press, let's update 
 If you are stuck on part 2, you can skip it and come back to it later, but you should complete it for full points.
 
 ## Challenge Exercise
-If you finish early, consider completing this challenge exercise: update your code so that combinations of two button presses (e.g. UP/DOWN or UP/RIGHT) can be used to toggle the LED in addition to single button presses. This can be done using only boolean variables, but you may want to use variables other than booleans to keep track of the state, if you weren't already doing that for Exercise 5.
+If you finish early, please attempt this challenge exercise. The exercise will not be graded, but is a more difficult problem that will extend your existing knowledge. Include what progress you've made by the end of the lab period. I'll go over ways to approach the challenge exercise at the beginning of the next lab.
+
+Update your code so that combinations of two button presses (e.g. UP/DOWN or UP/RIGHT) can be used to toggle the LED in addition to single button presses. This can be done using only boolean variables, but you may want to use variables other than booleans to keep track of the state, if you weren't already doing that for Exercise 5.
 
 # Lab Report
 ## Points Breakdown
