Updated lab submission instructions

--- a/E15/F22/E15_Lab2_FA22.html
+++ b/E15/F22/E15_Lab2_FA22.html
@@ -203,8 +203,8 @@ When including code in your lab reports, please follow the following conventions
 
 These conventions make your code much easier for me to test and grade promptly. Any code that does not follow these conventions may have points deducted.
 
-## Report Submission (same as last time)
-**Reports are due one week after your scheduled lab session.** One group member should submit the lab report as a PDF on Moodle and list each other group member on the front page. Any reports with missing group members may have points deducted.
+## Report Submission
+**Reports are due one week after your scheduled lab session.** One group member should submit the lab report as a PDF on Moodle and list each other group member on the front page. Any reports with missing group members may have points deducted. For the .ino files, format them based on the section letter and group number with no spaces: `Exercise_4_A1.ino`.
 
 
 
