Fix code wrap typo

--- a/E15/F22/E15_Lab1_FA22.html
+++ b/E15/F22/E15_Lab1_FA22.html
@@ -228,7 +228,7 @@ When including code in your lab reports, please follow the following conventions
 - Use a monospace font such as Courier New (for a list, see [here](https://en.wikipedia.org/wiki/List_of_monospaced_typefaces))
 - Use single spacing (i.e. 1.0 spacing; Google Docs defaults to 1.15)
 - Include comments that explain what the code does to someone else in the class already familiar with programming basics; you do not need a comment for every line
-- Check your comments and make sure they wrap to the next line (or put them there manually) when printing/saving your document
+- Check your comments and make sure they do not wrap to the next line (or put them there manually) when printing/saving your document
 
 These conventions make your code much easier for me to test and grade promptly. Any code that does not follow these conventions may have points deducted.
 
