Update index for lab 3

--- a/E15/F22/index.html
+++ b/E15/F22/index.html
@@ -15,6 +15,7 @@
 
 - [Lab 1](E15_Lab1_FA22.html): Introduction to Program Flow in Embedded Systems
 - [Lab 2](E15_Lab2_FA22.html): Using Conditionals and Buttons to Create A Passcode Enabled LED
+- [Lab 3](E15_Lab3_FA22.html): Using A Joystick To Control A Bank of LEDs
 
 # Final Project
 
