Add Serial.println() to while loop code in lab 2

--- a/E15/F22/E15_Lab3_FA22.html
+++ b/E15/F22/E15_Lab3_FA22.html
@@ -134,6 +134,8 @@ else {
 }
 loop--;
 }
+
+Serial.println();
 ```
 
 **If it's been 10 minutes and you're still stuck, hover over the "get a hint" text below:** <p title="For part 1, make sure to check each state (left, right, down, up) each time you run loop() and update the corresponding bit.">Get A Hint</p>
