add lab 4 and final project info

--- a/E15/F22/index.html
+++ b/E15/F22/index.html
@@ -16,9 +16,22 @@
 - [Lab 1](E15_Lab1_FA22.html): Introduction to Program Flow in Embedded Systems
 - [Lab 2](E15_Lab2_FA22.html): Using Conditionals and Buttons to Create A Passcode Enabled LED
 - [Lab 3](E15_Lab3_FA22.html): Using A Joystick To Control A Bank of LEDs
+- [Lab 4](E15_Lab4_FA22.html): RoboLaser
 
 # Final Project
 
-Information about final project details will be added here as the semester progresses.
+## Final Project Overview
+
+See the [slides](https://docs.google.com/presentation/d/108WA9cL_fxMyQdoIb950CACahaR16-qzbT6-QFXPPTA/edit#slide=id.g61b291203b_13_1) presented in class.
+
+## Final Project Dates
+
+11/1: Final project proposals due <br>
+11/8: Parts arrive <br>
+11/22: Progress reports due <br>
+12/14: Final project reports due <br>
+12/14: Final project presentations due
+
+All work can be submitted on Moodle in the final project section at the bottom.
 
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js" charset="utf-8"></script><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js" charset="utf-8"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
